Correction des exercices 1 et 2
- Utilisation de assertThatThrownBy pour tester les
  exceptions.
- Adaptation des énoncés pour tenir compte de ceci
  et de Java 8.