@@ -1,6 +1,5 @@
 package com.cpetot.workshop.tu.util;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.apache.commons.lang3.StringUtils;
@@ -12,7 +11,7 @@ public class MovieParser {
 	}
 
 	public static List<String> parse(String movies) {
-		return Arrays.asList(movies.split(","));
+		return List.of(movies.split(","));
 	}
 
 	public static String toString(List<String> movies) {
